test/fail/sequence-empty.grace
sequence.empty.at(1)

